crates/whiphand-tui/tests/snapshots/snapshots__detail_diff_200x50.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  /home/dev/shop  · Run  (experimental)                                                                                                                                                         "
"checkout flow (20261010-100000-a1b2)  feature  running  5m 0s  waiting on you  ⎇ whiphand/checkout                                                                                                      "
"                                                                                                                                                                                                        "
"┌ Steps ───────────────────────────────────────────────────────────────┐┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│  ✔ plan                                                              ││ 1 Log │ 2 Events │ 3 Artifacts │ 4 Diff                                                                                      │"
"│▾ ● fix-cycle  ↻ 2/3                                                  ││M src/cart.ts  +2 -1                                                                                                          │"
"│    ● execute ×2                                                      ││A src/cart.test.ts  +5 -0                                                                                                     │"
"│    ○ tests ×2                                                        ││M logo.png  +0 -0  binary                                                                                                     │"
"│  ○ sign-off                                                          ││──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│"
"│                                                                      ││diff --git a/src/cart.ts b/src/cart.ts                                                                                        │"
"│                                                                      ││--- a/src/cart.ts                                                                                                             │"
"│                                                                      ││+++ b/src/cart.ts                                                                                                             │"
"│                                                                      ││@@ -1,3 +1,4 @@                                                                                                               │"
"│                                                                      ││ export function cartTotal(items) {                                                                                           │"
"│                                                                      ││-  return items.reduce((s, i) => s + i.price, 0);                                                                             │"
"│                                                                      ││+  const sum = items.reduce((s, i) => s + i.price, 0);                                                                        │"
"│                                                                      ││+  return Math.round(sum * 100) / 100;                                                                                        │"
"│                                                                      ││ }                                                                                                                            │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"│                                                                      ││                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Tab switch pane  ·  1-4 tabs  ·  h ← collapse  ·  l → expand  ·  f errors only  ·  A every step's rows  ·  o open the artifact in $PAGER  ·  D git diff in a terminal  ·  Ctrl-r reload the diff  ·  ? "
