crates/whiphand-tui/tests/snapshots/snapshots__detail_diff_80x24.snap
---
source: crates/whiphand-tui/tests/snapshots.rs
expression: "render(model, size)"
---
"whiphand  /home/dev/shop  · Run  (experimental)                                 "
"checkout flow (20261010-100000-a1b2)  feature  running  5m 0s  waiting on you  ⎇"
"                                                                                "
"┌ Steps ───────────────────────────────────────────────────────────────────────┐"
"│  ✔ plan                                                                      │"
"│▾ ● fix-cycle  ↻ 2/3                                                          │"
"│    ● execute ×2                                                              │"
"│    ○ tests ×2                                                                │"
"│  ○ sign-off                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ 1 Log │ 2 Events │ 3 Artifacts │ 4 Diff                                      │"
"│M src/cart.ts  +2 -1                                                          │"
"│A src/cart.test.ts  +5 -0                                                     │"
"│M logo.png  +0 -0  binary                                                     │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│diff --git a/src/cart.ts b/src/cart.ts                                        │"
"│--- a/src/cart.ts                                                             │"
"│+++ b/src/cart.ts                                                             │"
"│@@ -1,3 +1,4 @@                                                               │"
"│ export function cartTotal(items) {                                           │"
"│-  return items.reduce((s, i) => s + i.price, 0);                             │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" Tab switch pane  ·  1-4 tabs  ·  h ← collapse  ·  l → expand  ·  e errors only "
